--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Loud Fame</title><link rel="stylesheet" href="styles.css" /></head>
 <body>
-<header><div class="logo">LOUD FAME</div><nav>
-<a href="index.html">Главная</a><a href="shop.html">Магазин</a>
-<a href="#about">О бренде</a><a href="#contact">Контакты</a></nav></header>
+<header>
+  <div class="logo">LOUD FAME</div>
+  <nav class="desktop-nav">
+    <a href="index.html">Главная</a><a href="shop.html">Магазин</a><a href="#about">О бренде</a><a href="#contact">Контакты</a>
+  </nav>
+  <div class="burger" onclick="toggleMenu()">☰</div>
+  <div id="mobile-menu" class="mobile-menu">
+    <span class="close-btn" onclick="toggleMenu()">×</span>
+    <a href="index.html" onclick="toggleMenu()">Главная</a>
+    <a href="shop.html" onclick="toggleMenu()">Магазин</a>
+    <a href="#about" onclick="toggleMenu()">О бренде</a>
+    <a href="#contact" onclick="toggleMenu()">Контакты</a>
+  </div>
+</header>
 <section class="hero"><h1>НОВАЯ КОЛЛЕКЦИЯ 2025</h1>
-<p></p><a href="shop.html" class="btn">СМОТРЕТЬ</a></section>
+<p>Вырази свою славу громко.</p><a href="shop.html" class="btn">СМОТРЕТЬ</a></section>
 <section id="about" class="about"><h2>О БРЕНДЕ</h2>
-<p>Бренд Loud Fame - это одежда для людей с амбициями и ценителей своей родины, семьи и стиля.</p></section>
+<p>Loud Fame — уличный стиль, который говорит громко. Создан для тех, кто не боится выделяться.</p></section>
 <footer id="contact"><p>© 2025 Loud Fame</p>
-<p>Связь: <a href="https://t.me/owner_LF">https://t.me/owner_LF</a></p>
-<div class="socials"><a href="https://www.instagram.com/loudfame.brand?igsh=bzU2cDA5cjlqejg4&utm_source=qr">Instagram</a><a href="https://t.me/loudfame_brand">Telegram</a></div></footer>
-</body></html>
+<p>Связь: <a href="mailto:info@loudfame.com">info@loudfame.com</a></p>
+<div class="socials"><a href="#">Instagram</a><a href="#">Telegram</a></div></footer>
+<script src="script.js"></script></body></html>
