--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="#contact" onclick="toggleMenu()">Контакты</a>
   </div>
 </header>
-<section class="hero"><img src="images/logo.png" alt="Loud Fame" class="hero-logo"><h1>НОВАЯ КОЛЛЕКЦИЯ 2025</h1>
+<section class="hero"><img src="images/logo.png" alt="Loud Fame" class="hero-logo" style="width: 100px;"><h1>НОВАЯ КОЛЛЕКЦИЯ 2025</h1>
 <p>Вырази свою славу громко.</p><a href="shop.html" class="btn">СМОТРЕТЬ</a></section>
 <section id="about" class="about"><h2>О БРЕНДЕ</h2>
 <p>Loud Fame — уличный стиль, который говорит громко. Создан для тех, кто не боится выделяться.</p></section>
